Rename operation to procedure
