# src/procedure/controller.js
@@ -1,11 +1,11 @@
-const Operation = require('./model');
+const Procedure = require('./model');
 const async = require('async');
 
 exports.getAll = async (req, res) => {
     try {
-        const operations = await Operation.find({});
+        const procedures = await Procedure.find({});
 
-        res.status(200).send(operations);
+        res.status(200).send(procedures);
     } catch (e) {
         res.status(400).send({ error: e});
     }
@@ -14,9 +14,9 @@ exports.getAll = async (req, res) => {
 
 exports.getOne = async (req, res) => {
     try {
-        const operation = await Operation.find({_id: req.params.id});
+        const procedure = await Procedure.find({_id: req.params.id});
 
-        res.status(200).send(operation);
+        res.status(200).send(procedure);
     } catch (e) {
         res.status(400).send({ error: e});
     }
@@ -25,9 +25,9 @@ exports.getOne = async (req, res) => {
 
 exports.create = async (req, res) => {
     try{
-        const operation = await Operation.create(req.body);
+        const procedure = await Procedure.create(req.body);
 
-        res.status(200).send(operation);
+        res.status(200).send(procedure);
 
     } catch (e) {
         res.status(400).send({ error: 'Falha ao salvar. ' + e});
@@ -36,7 +36,7 @@ exports.create = async (req, res) => {
 
 exports.delete = async (req, res) => {
     try {
-        const operation = await Operation.remove(req.body);
+        const procedure = await Procedure.remove(req.body);
 
         res.status(200).send({message: 'Deletado com sucesso!'})
     } catch (e) {
@@ -46,7 +46,7 @@ exports.delete = async (req, res) => {
 
 exports.update = async (req, res) => {
     try {
-        const operation = await Operation.findOneAndUpdate(req.body);
+        const procedure = await Procedure.findOneAndUpdate(req.body);
 
         res.status(200).send('Atualizado com sucesso!');
 
