# src/procedure/procedure.controller.js
@@ -1,8 +1,8 @@
-const operationService = require('../operation/operation.service')
+const procedureService = require('../procedure/procedure.service')
 
 exports.getAll = async (req, res) => {
     try {
-        operationService.getAllOperations((response) => {
+        procedureService.getAllProcedures((response) => {
             res.status(response.status).send(response);
         });
     } catch (e) {
@@ -12,7 +12,7 @@ exports.getAll = async (req, res) => {
 
 exports.getOne = async (req, res) => {
     try {
-        await operationService.getOneOperation(req.params.id, (response) => {
+        await procedureService.getOneProcedure(req.params.id, (response) => {
             res.status(response.status).send(response);
         });
     } catch (e) {
@@ -23,7 +23,7 @@ exports.getOne = async (req, res) => {
 
 exports.create = async (req, res) => {
     try{
-        await operationService.createOperation(req.body, (response) => {
+        await procedureService.createProcedure(req.body, (response) => {
             res.status(response.status).send(response);
         }) 
 
@@ -35,7 +35,7 @@ exports.create = async (req, res) => {
 exports.delete = async (req, res) => {
     try {
 
-        await operationService.deleteOperation(req.params.id, (response) => {
+        await procedureService.deleteProcedure(req.params.id, (response) => {
             res.status(response.status).send(response);
         });
     } catch (e) {
@@ -45,7 +45,7 @@ exports.delete = async (req, res) => {
 
 exports.update = async (req, res) => {
     try {
-        await operationService.updateOperation(req.params.id, (response) => {
+        await proceduresService.updateProcedure(req.params.id, (response) => {
             res.status(response.status).send(response);
         })
 
